syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "Auth";
package com.soroosh.auth.grpc;
option  java_package = "com.soroosh.auth.grpc.dto";

message User{
  int64 id = 1;
  string firstName = 2;
  string lastName = 3;
  string mobile = 4;
}

message RequestUser {
  int64 user_id = 1;
}